--- a/yahd2mm.csproj
+++ b/yahd2mm.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <RootNamespace>yahd2mm</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
