--- a/yahd2mm.csproj
+++ b/yahd2mm.csproj
@@ -57,6 +57,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspose.Zip" Version="25.8.0" />
+    <PackageReference Include="Ben.Demystifier" Version="0.4.1" />
     <PackageReference Include="FuzzySharp" Version="2.0.2" />
     <PackageReference Include="ImGui.NET" Version="1.91.6.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
