--- a/yahd2mm.csproj
+++ b/yahd2mm.csproj
@@ -64,6 +64,7 @@
     <PackageReference Include="Semver" Version="3.0.0" />
     <PackageReference Include="SharpCompress" Version="0.40.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+    <PackageReference Include="TinyDialogsNet" Version="2.0.0" />
     <PackageReference Include="ValveKeyValue" Version="0.20.0.417" />
     <PackageReference Include="Veldrid" Version="4.9.0" />
     <PackageReference Include="Veldrid.StartupUtilities" Version="4.9.0" />
